--- a/mbed_app.json
+++ b/mbed_app.json
@@ -24,11 +24,32 @@
             "target.macros_add": ["MBED_CONF_APP_MAIN_STACK_SIZE=8192",
                                   "LCD_SIZE=SD_7INCH"]
         },
+        "RZ_A2M_EVB": {
+            "esp32.wifi-en" : "PD_6",
+            "esp32.wifi-tx" : "P6_3",
+            "esp32.wifi-rx" : "P6_2",
+            "esp32.provide-default": true,
+            "esp32.wifi-baudrate":400000
+        },
         "RZ_A2M_SBEV": {
-            "target.macros_add"     : ["OVERRIDE_CONSOLE_USBSERIAL"]
+            "target.macros_add"     : ["OVERRIDE_CONSOLE_USBSERIAL"],
+            "esp32.wifi-en" : "PJ_7",
+            "esp32.wifi-tx" : "PJ_2",
+            "esp32.wifi-rx" : "PJ_1",
+            "esp32.wifi-rts": "PJ_3",
+            "esp32.wifi-cts": "PJ_4",
+            "esp32.provide-default": true,
+            "esp32.wifi-baudrate":1152000
         },
         "SEMB1402": {
-            "target.macros_add"     : ["OVERRIDE_CONSOLE_USBSERIAL"]
+            "target.macros_add"     : ["OVERRIDE_CONSOLE_USBSERIAL"],
+            "esp32.wifi-en" : "PH_6",
+            "esp32.wifi-tx" : "PF_5",
+            "esp32.wifi-rx" : "PF_4",
+            "esp32.wifi-rts": "PF_6",
+            "esp32.wifi-cts": "PH_2",
+            "esp32.provide-default": true,
+            "esp32.wifi-baudrate":1152000
         }
     }
 }
