--- a/mbed_app.json
+++ b/mbed_app.json
@@ -25,6 +25,8 @@
                                   "LCD_SIZE=SD_7INCH"]
         },
         "RZ_A2M_EVB": {
+            "target.bootloader_img" : "bootloader_d_n_d/RZ_A2M_EVB_boot.bin",
+            "target.app_offset"     : "0x20000",
             "esp32.wifi-en" : "P6_1",
             "esp32.wifi-tx" : "P6_3",
             "esp32.wifi-rx" : "P6_2",
@@ -32,6 +34,8 @@
             "esp32.wifi-baudrate":400000
         },
         "RZ_A2M_SBEV": {
+            "target.bootloader_img" : "bootloader_d_n_d/RZ_A2M_SBEV_boot.bin",
+            "target.app_offset"     : "0x20000",
             "target.macros_add"     : ["OVERRIDE_CONSOLE_USBSERIAL"],
             "esp32.wifi-en" : "PJ_7",
             "esp32.wifi-tx" : "PJ_2",
@@ -42,6 +46,8 @@
             "esp32.wifi-baudrate":1152000
         },
         "SEMB1402": {
+            "target.bootloader_img" : "bootloader_d_n_d/SEMB1402_boot.bin",
+            "target.app_offset"     : "0x20000",
             "target.macros_add"     : ["OVERRIDE_CONSOLE_USBSERIAL"],
             "esp32.wifi-en" : "PH_6",
             "esp32.wifi-tx" : "PF_5",
