Updated custom boot loader and added HyperFlash boot.

--- a/mbed_app.json
+++ b/mbed_app.json
@@ -26,7 +26,16 @@
         },
         "RZ_A2M_EVB": {
             "target.bootloader_img" : "bootloader_d_n_d/RZ_A2M_EVB_boot.bin",
-            "target.app_offset"     : "0x20000",
+            "target.app_offset"     : "0x40000",
+            "esp32.wifi-en" : "P6_1",
+            "esp32.wifi-tx" : "P6_3",
+            "esp32.wifi-rx" : "P6_2",
+            "esp32.provide-default": true,
+            "esp32.wifi-baudrate":400000
+        },
+        "RZ_A2M_EVB_HF": {
+            "target.bootloader_img" : "bootloader_d_n_d/RZ_A2M_EVB_HF_boot.bin",
+            "target.app_offset"     : "0x40000",
             "esp32.wifi-en" : "P6_1",
             "esp32.wifi-tx" : "P6_3",
             "esp32.wifi-rx" : "P6_2",
@@ -35,7 +44,7 @@
         },
         "RZ_A2M_SBEV": {
             "target.bootloader_img" : "bootloader_d_n_d/RZ_A2M_SBEV_boot.bin",
-            "target.app_offset"     : "0x20000",
+            "target.app_offset"     : "0x40000",
             "target.macros_add"     : ["OVERRIDE_CONSOLE_USBSERIAL"],
             "esp32.wifi-en" : "PJ_7",
             "esp32.wifi-tx" : "PJ_2",
@@ -47,7 +56,7 @@
         },
         "SEMB1402": {
             "target.bootloader_img" : "bootloader_d_n_d/SEMB1402_boot.bin",
-            "target.app_offset"     : "0x20000",
+            "target.app_offset"     : "0x40000",
             "target.macros_add"     : ["OVERRIDE_CONSOLE_USBSERIAL"],
             "esp32.wifi-en" : "PH_6",
             "esp32.wifi-tx" : "PF_5",
