Supports GR-MANGO custom bootloader

--- a/mbed_app.json
+++ b/mbed_app.json
@@ -24,6 +24,8 @@
             "target.macros_add": ["MBED_CONF_APP_MAIN_STACK_SIZE=8192"]
         },
         "GR_MANGO": {
+            "target.bootloader_img" : "bootloader_d_n_d/GR_MANGO_boot.bin",
+            "target.app_offset"     : "0x11000",
             "esp32.wifi-en" : "P4_0",
             "esp32.wifi-tx" : "P4_2",
             "esp32.wifi-rx" : "P4_1",
